# AHFL

./: .clang-format  .clang-format-ignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MIGRATION.md  README.md  README.zh.md  llm_config.json
src/: CMakeLists.txt  ast.cpp  frontend.cpp  ir.cpp  ir_json.cpp  resolver.cpp  typecheck.cpp  validate.cpp
src/abi/: CMakeLists.txt  compat_check.cpp  compat_check.hpp  version_info.cpp
src/assurance/: CMakeLists.txt  assurance.cpp
src/audit_report/: CMakeLists.txt  report.cpp  report.hpp
src/backends/: CMakeLists.txt  assurance.cpp  audit_report.cpp  checkpoint_record.cpp  checkpoint_review.cpp  checkpoint_review.hpp  driver.cpp  dry_run_trace.cpp  durable_store_import_adapter_execution.cpp  durable_store_import_decision.cpp  durable_store_import_decision_review.cpp  durable_store_import_provider_approval_receipt.cpp  durable_store_import_provider_capability_negotiation_review.cpp  durable_store_import_provider_compatibility_report.cpp  durable_store_import_provider_compatibility_test_manifest.cpp  durable_store_import_provider_config_bundle_validation_report.cpp  durable_store_import_provider_config_load.cpp  durable_store_import_provider_config_readiness.cpp  durable_store_import_provider_config_snapshot.cpp  durable_store_import_provider_conformance_report.cpp  durable_store_import_provider_driver_binding.cpp  durable_store_import_provider_driver_readiness.cpp  durable_store_import_provider_execution_audit_event.cpp  durable_store_import_provider_failure_taxonomy_report.cpp  durable_store_import_provider_failure_taxonomy_review.cpp  durable_store_import_provider_fixture_matrix.cpp  durable_store_import_provider_host_execution.cpp  durable_store_import_provider_host_execution_readiness.cpp  durable_store_import_provider_local_filesystem_alpha_plan.cpp  durable_store_import_provider_local_filesystem_alpha_readiness.cpp  durable_store_import_provider_local_filesystem_alpha_result.cpp  durable_store_import_provider_local_host_execution_receipt.cpp  durable_store_import_provider_local_host_execution_receipt_review.cpp  durable_store_import_provider_local_host_harness_record.cpp  durable_store_import_provider_local_host_harness_request.cpp  durable_store_import_provider_local_host_harness_review.cpp  durable_store_import_provider_operator_review_event.cpp  durable_store_import_provider_opt_in_decision_report.cpp  durable_store_import_provider_production_integration_dry_run_report.cpp  durable_store_import_provider_production_readiness_evidence.cpp  (+69 more)
src/checkpoint_record/: CMakeLists.txt  record.cpp  record.hpp  review.cpp  review.hpp
src/cli/: CMakeLists.txt  ahfl_run.cpp  ahflc.cpp  cli_driver.cpp  cli_driver.hpp  cli_pipeline_artifacts.cpp  cli_pipeline_artifacts.hpp  command_catalog.cpp  command_catalog.hpp  diagnostic_consumer.cpp  diagnostic_consumer.hpp  durable_store_import_provider_commands.def  exit_code.hpp  option_table.cpp  option_table.hpp  pipeline_context.hpp  pipeline_core_commands.cpp  pipeline_core_commands.hpp  pipeline_durable_store_import.cpp  pipeline_durable_store_import.hpp  pipeline_durable_store_import_provider.cpp  pipeline_durable_store_import_provider.hpp  pipeline_durable_store_import_provider_artifacts.def  pipeline_durable_store_import_provider_steps.hpp  pipeline_emit.hpp  pipeline_runner.cpp  pipeline_runner.hpp  provider_pipeline_cache.cpp  provider_pipeline_cache.hpp  provider_step_generic.hpp  provider_step_graph.def
src/dap/: CMakeLists.txt  breakpoints.cpp  dap_server.cpp  dap_server.hpp  state_inspector.cpp
src/dry_run/: CMakeLists.txt  mock.cpp  runner.cpp
src/durable_store_import/: CMakeLists.txt  adapter_execution.cpp  adapter_execution.hpp  artifacts.cpp  artifacts.hpp  decision.cpp  decision.hpp  decision_review.cpp  decision_review.hpp  provider.hpp  provider_adapter.cpp  provider_adapter.hpp  provider_approval_workflow.cpp  provider_approval_workflow.hpp  provider_artifacts.hpp  provider_audit.cpp  provider_audit.hpp  provider_commit.cpp  provider_commit.hpp  provider_compatibility.cpp  provider_compatibility.hpp  provider_config.cpp  provider_config.hpp  provider_config_bundle_validation.cpp  provider_config_bundle_validation.hpp  provider_conformance.cpp  provider_conformance.hpp  provider_driver.cpp  provider_driver.hpp  provider_failure_taxonomy.cpp  provider_failure_taxonomy.hpp  provider_host_execution.cpp  provider_host_execution.hpp  provider_local_filesystem_alpha.cpp  provider_local_filesystem_alpha.hpp  provider_local_host_execution.cpp  provider_local_host_execution.hpp  provider_local_host_harness.cpp  provider_local_host_harness.hpp  provider_opt_in_guard.cpp  (+51 more)
src/evaluator/: CMakeLists.txt  eval_context.cpp  eval_context.hpp  evaluator.cpp  evaluator.hpp  executor.cpp  executor.hpp  value.cpp  value.hpp  value_json.cpp  value_json.hpp
src/execution_journal/: CMakeLists.txt  journal.cpp  journal.hpp
src/formal/: CMakeLists.txt  bmc.cpp  checker.cpp  checker.hpp  counterexample.cpp  counterexample_json.cpp  counterexample_json.hpp  incremental_verifier.cpp  incremental_verifier.hpp  model_checker_backend.cpp  model_checker_backend.hpp  nuxmv_backend.cpp  nuxmv_backend.hpp  process_launcher.cpp  process_launcher.hpp  spin_backend.cpp  spin_backend.hpp  state_space_estimator.cpp  tlaplus_backend.cpp  tlaplus_backend.hpp
src/formatter/: CMakeLists.txt  format_config.cpp  format_config.hpp  formatter.cpp  formatter.hpp
src/frontend/: CMakeLists.txt  ast.cpp  error_recovery.cpp  error_recovery.hpp  frontend.cpp  project.cpp
src/handoff/: CMakeLists.txt  package.cpp
src/incremental/: CMakeLists.txt  dependency_graph.cpp  incremental_compiler.cpp  incremental_compiler.hpp  ir_cache.cpp  ir_cache.hpp
src/ir/: CMakeLists.txt  ir.cpp  ir_json.cpp
src/json/: CMakeLists.txt  json_value.cpp  json_value.hpp
src/llm_provider/: CMakeLists.txt  http_client.cpp  http_client.hpp  llm_capability_provider.cpp  llm_capability_provider.hpp  llm_provider_config.cpp  llm_provider_config.hpp  prompt_builder.cpp  prompt_builder.hpp  (+11 more)
(+2527 files in other folders)
