add_library(ahfl_support INTERFACE)
target_include_directories(ahfl_support
    INTERFACE
        ${PROJECT_SOURCE_DIR}/include
)
ahfl_enable_cxx23(ahfl_support)

add_subdirectory(support)
add_subdirectory(json)
add_subdirectory(parser)
add_subdirectory(frontend)
add_subdirectory(semantics)
add_subdirectory(ir)
add_subdirectory(assurance)
add_subdirectory(handoff)
add_subdirectory(dry_run)
add_subdirectory(runtime_session)
add_subdirectory(execution_journal)
add_subdirectory(replay_view)
add_subdirectory(audit_report)
add_subdirectory(scheduler_snapshot)
add_subdirectory(checkpoint_record)
add_subdirectory(persistence_descriptor)
add_subdirectory(persistence_export)
add_subdirectory(store_import)
add_subdirectory(durable_store_import)
add_subdirectory(evaluator)
add_subdirectory(runtime)
add_subdirectory(llm_provider)
add_subdirectory(backends)
add_subdirectory(formal)
add_subdirectory(secret)
add_subdirectory(passes)
add_subdirectory(lsp)
add_subdirectory(formatter)
add_subdirectory(repl)
add_subdirectory(dap)
add_subdirectory(telemetry)
add_subdirectory(profiling)
add_subdirectory(abi)
add_subdirectory(incremental)
add_subdirectory(testing)
add_subdirectory(package)

add_library(ahfl_compiler INTERFACE)
target_link_libraries(ahfl_compiler
    INTERFACE
        ahfl_support_lib
        ahfl_handoff
        ahfl_dry_run
        ahfl_evaluator
        ahfl_runtime
        ahfl_runtime_session
        ahfl_execution_journal
        ahfl_replay_view
        ahfl_audit_report
        ahfl_scheduler_snapshot
        ahfl_checkpoint_record
        ahfl_persistence_descriptor
        ahfl_persistence_export
        ahfl_store_import
        ahfl_durable_store_import
        ahfl_assurance
        ahfl_formal
        ahfl_llm_provider
        ahfl_backend
        ahfl_json
        ahfl_secret
        ahfl_passes
        ahfl_lsp
        ahfl_formatter
        ahfl_repl
        ahfl_dap
        ahfl_telemetry
        ahfl_profiling
        ahfl_abi
        ahfl_incremental
        ahfl_testing
        ahfl_package
)

add_library(ahfl_frontend INTERFACE)
target_link_libraries(ahfl_frontend
    INTERFACE
        ahfl_compiler
)

add_subdirectory(cli)
